tests/purs/warning/WildcardInferredType.out
Error 1 of 2:

  in module [33mMain[0m
  at tests/purs/warning/WildcardInferredType.purs:7:6 - 7:7 (line 7, column 6 - line 7, column 7)

    Wildcard type definition has the inferred type
    [33m     [0m
    [33m  Int[0m
    [33m     [0m

  in value declaration [33my[0m

  See https://github.com/purescript/documentation/blob/master/errors/WildcardInferredType.md for more information,
  or to contribute content related to this error.

Error 2 of 2:

  in module [33mMain[0m
  at tests/purs/warning/WildcardInferredType.purs:5:10 - 5:11 (line 5, column 10 - line 5, column 11)

    Wildcard type definition has the inferred type
    [33m     [0m
    [33m  Int[0m
    [33m     [0m

  in value declaration [33mx[0m

  See https://github.com/purescript/documentation/blob/master/errors/WildcardInferredType.md for more information,
  or to contribute content related to this error.

